# aws-workshop-v2

./: .gitignore  README.md  aws_account.baseline.yml  aws_org.ou.scp.json  pyproject.toml  workshop.py
.devcontainer/: Dockerfile  devcontainer.json
