[tool.poetry]
name = "aws-workshop-v2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "aws_workshop_v2"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.108"
PyYAML = "^6.0"

[tool.poetry.scripts]
workshop = "workshop.main:main"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
black = "^23.3.0"
moto = {extras = ["cloudformation", "iam", "organizations", "sts"], version = "^4.1.6"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
